--- a/remote.css
+++ b/remote.css
@@ -4,6 +4,9 @@ html {
 
 body {
   overflow-y: scroll;
+  margin: 20px;
+  height: calc(100% - 40px);
+  width: calc(100% - 40px);
 }
 
 .menu-button {
