--- a/remote.css
+++ b/remote.css
@@ -37,3 +37,119 @@ body {
 .shown-on-mirror > .symbol-on-hide {
     display: none;
 }
+
+.slider-container {
+  display: table-cell;
+  vertical-align: middle;
+  height: 2em;
+  max-width: 400px;
+}
+
+.stack {
+  position: relative;
+  display: inline-block;
+  height: 1em;
+  line-height: 1em;
+  font-size: 1em;
+  vertical-align: middle;
+}
+
+.inner-label {
+  font-size: 0.9em;
+}
+
+.outer-label {
+  font-size: 1em;
+}
+
+.slider {
+  vertical-align: middle;
+}
+
+/* slider appearance created with http://danielstern.ca/range.css/?ref=css-tricks#/ */
+input[type=range] {
+  -webkit-appearance: none;
+  width: 95%;
+  margin: 15px 0;
+  background: #000000;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: #999999;
+  border-radius: 10px;
+  border: 2px solid rgba(0, 0, 0, 0);
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 2px solid rgba(0, 0, 0, 0);
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -12px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #9c9c9c;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: #999999;
+  border-radius: 10px;
+  border: 2px solid rgba(0, 0, 0, 0);
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 2px solid rgba(0, 0, 0, 0);
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #969696;
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 20px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+}
+input[type=range]::-ms-fill-upper {
+  background: #999999;
+  border: 2px solid rgba(0, 0, 0, 0);
+  border-radius: 20px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 2px solid rgba(0, 0, 0, 0);
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  background: #ffffff;
+  cursor: pointer;
+  height: 10px;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #999999;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #9c9c9c;
+}
