--- a/remote.css
+++ b/remote.css
@@ -8,6 +8,10 @@ body {
   width: calc(100% - 20px);
 }
 
+a {
+  color: white;
+}
+
 .fill {
   height: 100%;
   display: flex;
@@ -117,7 +121,6 @@ input:focus, select:focus {
 }
 
 .slider-container {
-  display: table-cell;
   vertical-align: middle;
   height: 2em;
   max-width: 400px;
