--- a/remote.css
+++ b/remote.css
@@ -126,12 +126,29 @@ a {
   padding: 0.1em;
 }
 
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0.5;
+}
+
 .result {
   position: absolute;
-  right: 0px;
   top: -5px;
-  line-height: 1em;
-  font-size: 15px;
+  width: 70%;
+  height: 50%;
+  left: 15%;
+  top: 25%;
+  background: black;
+  border: 2px solid #666;
+  display: flex;
+  border-radius: 0.2em;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 25px;
+  line-height: 1.5em;
 }
 
 .module-line {
@@ -247,7 +264,12 @@ input:focus.input-error {
 }
 
 .popup .delete-button {
-  right: 0.1em;
+  right: 0.25em;
+  top: 0.25em;
+}
+
+.result .delete-button {
+  right: 0.25em;
   top: 0.25em;
 }
 
