--- a/remote-control.css
+++ b/remote-control.css
@@ -5,3 +5,11 @@
   width: 100%;
   height: 100%;
 }
+
+#remote-control-overlay-temp {
+  position: fixed;
+  z-index: 2;
+  background-color: rgb(0 0 0 / 10%);
+  width: 100%;
+  height: 100%;
+}
