--- a/remote-control.css
+++ b/remote-control.css
@@ -5,3 +5,10 @@
   width: 100%;
   height: 100%;
 }
+#remote-control-overlay-temp {
+  position: fixed;
+  z-index: 2;
+  background-color: rgba(0,0,0,0.1);
+  width: 100%;
+  height: 100%;
+}
