--- a/remote.css
+++ b/remote.css
@@ -490,7 +490,7 @@ input[type=checkbox]:checked~.fa-check-square-o {
     display: block;
 }
 
-/* slider appearance created with http://danielstern.ca/range.css/?ref=css-tricks#/ */
+/* slider appearance created with https://danielstern.ca/range.css/?ref=css-tricks#/ */
 input[type=range] {
     -webkit-appearance: none;
     background: #000000;
